# arg-lisp

./: .gitignore  README.md  pyproject.toml
arg_lisp/: arg_lisp.py  functions.py  lexer.py  parser.py  trie.py
tests/: test_arg_lisp.py  test_lexer.py  test_parser.py  test_trie.py
vim/ftdetect/: arglisp.vim
vim/syntax/: arglisp.vim
