[tool.poetry]
name = "arg-lisp"
version = "0.1.0"
description = ""
authors = ["CalebJohn <arg_lisp@calebjohn.ca>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
