[project]
name = "arg-lisp"
version = "1.0.0"
description = ""
authors = [
    {name = "CalebJohn", email = "arglisp@calebjohn.ca"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7",
    "black>=22.3.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

